k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  labels:
    app: flask
spec:
  ports:
  - port: 8080
    targetPort: 5000
    protocol: TCP
    name: flask
  selector:
    app: flask
  type: LoadBalancer
